# vk-layer-for-rust

./: .gitignore  .gitmodules  .mdformat.toml  .pep8  .typos.toml  Android.bp  CONTRIBUTING.md  Cargo.toml  Makefile.toml  Pipfile  README.md  pyproject.toml  rustfmt.toml  taplo.toml  testfile  yamlfmt.yml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: postsubmit-miri.yml  postsubmit.yml  presubmit.yml
.idx/: dev.nix
coverage-Linux/: coverage_badge.json  lcov.info
coverage-Linux/llvm-cov/html/: index.html
coverage-Windows/: coverage_badge.json  lcov.info
coverage-Windows/llvm-cov/html/: index.html
doc-Linux/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc-Linux/VkLayer_vendor_rust_example_hello_world/: all.html  index.html
doc-Linux/ci/: all.html  fn.create_shield_badge.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html  struct.CoverageReport.html  struct.CoverageReportData.html  struct.CoverageReportDataTotals.html  struct.CoverageStats.html  struct.ShieldBadge.html
doc-Linux/codegen/: all.html  fn.create_file_all.html  fn.current_year.html  fn.generate_vulkan_layer_header_binding.html  fn.guess_python_command.html  fn.main.html  fn.run_vulkan_layer_genvk.html  index.html  sidebar-items.js  struct.Cli.html  struct.GenvkArgs.html  type.Task.html
doc-Linux/implementors/lazy_static/: trait.LazyStatic.js
doc-Linux/list_files/: all.html  constant.ABOUT.html  fn.included_paths.html  fn.main.html  index.html  struct.Cli.html
doc-Linux/vulkan_layer/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  enum.Extension.html  enum.LayerResult.html  enum.LayerVulkanCommand.html  fn.fill_vk_out_array.html  index.html  macro.declare_introspection_queries!.html  macro.declare_introspection_queries.html  sidebar-items.js  struct.ExtensionProperties.html  struct.Global.html  struct.LayerManifest.html  struct.StubDeviceInfo.html  struct.StubGlobalHooks.html  struct.StubInstanceInfo.html  struct.VulkanBaseInStructChain.html  struct.VulkanBaseOutStructChain.html  trait.DeviceHooks.html  trait.DeviceInfo.html  trait.GlobalHooks.html  trait.GlobalHooksInfo.html  trait.InstanceHooks.html  trait.InstanceInfo.html  trait.Layer.html  type.VkLayerDeviceLink.html  type.VkLayerInstanceLink.html
doc-Linux/vulkan_layer_macros/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  index.html  macro.declare_introspection_queries.html  sidebar-items.js
doc-Linux/vulkan_layer_scripts/: all.html  index.html  sidebar-items.js
doc-Linux/xtask/: all.html  fn.main.html  index.html
doc-Windows/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc-Windows/VkLayer_vendor_rust_example_hello_world/: all.html  index.html
doc-Windows/ci/: all.html  fn.create_shield_badge.html  fn.main.html  index.html  struct.Cli.html  struct.CoverageReport.html  struct.CoverageReportData.html  struct.CoverageReportDataTotals.html  struct.CoverageStats.html  struct.ShieldBadge.html
doc-Windows/codegen/: all.html  fn.create_file_all.html  fn.current_year.html  fn.generate_vulkan_layer_header_binding.html  fn.guess_python_command.html  fn.main.html  fn.run_vulkan_layer_genvk.html  index.html  sidebar-items.js  struct.Cli.html  struct.GenvkArgs.html  type.Task.html
doc-Windows/list_files/: all.html  constant.ABOUT.html  fn.build_patterns.html  fn.included_paths.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
doc-Windows/vulkan_layer/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  enum.Extension.html  enum.LayerResult.html  enum.LayerVulkanCommand.html  fn.fill_vk_out_array.html  index.html  macro.declare_introspection_queries.html  struct.ExtensionProperties.html  struct.Global.html  struct.LayerManifest.html  struct.StubDeviceInfo.html  struct.StubGlobalHooks.html  struct.StubInstanceInfo.html  struct.VulkanBaseInStructChain.html  struct.VulkanBaseOutStructChain.html  trait.DeviceHooks.html  trait.DeviceInfo.html  trait.GlobalHooks.html  trait.GlobalHooksInfo.html  trait.InstanceHooks.html  trait.InstanceInfo.html  trait.Layer.html  type.VkLayerDeviceLink.html  type.VkLayerInstanceLink.html
doc-Windows/vulkan_layer_macros/: all.html  attr.auto_deviceinfo_impl.html  attr.auto_globalhooksinfo_impl.html  attr.auto_instanceinfo_impl.html  index.html  macro.declare_introspection_queries.html
doc-Windows/vulkan_layer_scripts/: all.html  index.html
doc-Windows/xtask/: all.html  fn.main.html
examples/hello-world/: Cargo.toml
examples/hello-world/src/: impl.rs  lib.rs
nexus-vulkan-layer/: Android.bp  Cargo.toml  VkLayer_google_nexus_windows.json  build.rs
nexus-vulkan-layer/ffi/: cros_gralloc_handle.h
nexus-vulkan-layer/src/: bindings.rs  cros_gralloc_helpers.rs  layer_impl.rs  lib.rs
scripts/: Cargo.toml  ci.rs  codegen.rs  global_simple_intercept_generator.py  layer_trait_generator.py  lib.rs  list-files.rs  vk_xml_util.py  vulkan_layer_genvk.py
scripts/list_files/: main.rs  mod.rs
scripts/vulkan_layer_genvk/: __init__.py  __main__.py  global_simple_intercept_generator.py  layer_trait_generator.py  vk_xml_util.py
vulkan-layer/: Android.bp  Cargo.toml  build.rs
vulkan-layer-macros/: Cargo.toml
vulkan-layer-macros/src/: details.rs  dummy.rs  lib.rs  test_utils.rs
vulkan-layer/src/: bindings.rs  generated.rs  global_simple_intercept.rs  layer_trait.rs  lazy_collection.rs  lib.rs  test_utils.rs  unstable_api.rs  vk_utils.rs
vulkan-layer/src/bindings/: vk_layer.rs
vulkan-layer/src/bindings/vk_layer/: generated.rs
vulkan-layer/src/global_simple_intercept/: generated.rs
vulkan-layer/src/layer_trait/: generated.rs
vulkan-layer/src/test_utils/: device_hooks_mock.rs  global_hooks_mock.rs  instance_hooks_mock.rs
vulkan-layer/tests/: autoinfo_macros_test.rs  declare_introspection_queries_test.rs  integration_test.rs
vulkan-layer/tests/utils/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+332 files in other folders)
