# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["vulkan-layer", "vulkan-layer-macros", "examples/hello-world", "scripts"]
resolver = "2"
# Do not operate on vulkan-layer-macros by default, because it doesn't work well with panic=abort
# for testing.
default-members = ["vulkan-layer"]

[profile.dev]
panic = "abort"

[profile.dev.build-override]
opt-level = 3

[profile.release]
panic = "abort"
