[package]
name = "nexus-vulkan-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "VkLayer_nexus"
crate-type = ["cdylib"]

[dependencies]
ash = "0.37.2"
log = "0.4.17"
vulkan-layer = { path = "../vulkan-layer" }
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Diagnostics_Debug"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
