# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
edition = "2021"
name = "vulkan-layer-scripts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bindgen = "0.69.4"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
glob = "0.3.1"
ignore = "0.4.22"
imara-diff = "0.1.6"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
shlex = "1.3.0"
tempfile = "3.10.1"
walkdir = "2.5.0"

[lib]
path = "lib.rs"

[[bin]]
name = "ci"
path = "ci.rs"

[[bin]]
name = "codegen"
path = "codegen.rs"

[[bin]]
name = "list-files"
path = "list_files/main.rs"
