# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
edition = "2021"
name = "vulkan-layer"
version = "0.1.0"

[dependencies]
ash = "0.37.3"
bytemuck = "1.14.1"
cfg-if = "1.0.0"
log = "0.4.17"
mockall = { version = "0.12.1", optional = true }
num-traits = "0.2.17"
once_cell = "1.17.1"
smallvec = "1.13.1"
thiserror = "1.0.49"
vulkan-layer-macros = { path = "../vulkan-layer-macros" }

[features]
_test = ["dep:mockall", "unstable"]
default = []
unstable = []

[dev-dependencies]
env_logger = "0.11.3"
vulkan-layer = { path = ".", default-features = false, features = ["_test"] }

[build-dependencies]
rustc_version = "0.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(RUSTC_NIGHTLY)'] }
