# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
edition = "2021"
name = "vk-layer-example-hello-world"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "VkLayer_vendor_rust_example_hello_world"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ash = "0.37.3"
once_cell = "1.17.1"
vulkan-layer = { path = "../../vulkan-layer" }
